Fixed numbering spacing for quick check features

--- a/css/ccap-precalculus.css
+++ b/css/ccap-precalculus.css
@@ -3581,6 +3581,15 @@ div.colophon.end-of-book-solutions div.solution .cnx-svg::before {
 .note.checkpoint .exercise .solution {
   display: none;
 }
+.note.quick-check.emphasized > .title,
+.note.checkpoint.emphasized > .title {
+  padding-left: 2px;
+}
+.note.quick-check.emphasized > .title::before,
+.note.checkpoint.emphasized > .title::before {
+  display: block;
+  padding-top: 6px;
+}
 .note.quick-check.emphasized .exercise .problem,
 .note.checkpoint.emphasized .exercise .problem {
   margin-left: 2px;
