--- a/css/refactor/math-skeleton.less
+++ b/css/refactor/math-skeleton.less
@@ -72,6 +72,13 @@
   // Fix problem offset inside emphasized versions of quick check and checkpoint.
   &.quick-check, &.checkpoint {
     &.emphasized {
+      > .title {
+        padding-left: 2px;
+      }
+      > .title::before {
+        display: block;
+        padding-top: 6px;
+      }
       .exercise .problem { margin-left: 2px; }
     }
   }
